Authentication completed In Backend

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,2 +1,9 @@
 PORT=5000
+
 DATABASE=mongodb://localhost:27017
+
+JWTSECRET=ASHIEPDKXMKDFEIDJKAJDSFQIAEDKJDFNDNDKJD
+
+JWTEXPIRES= 6d
+
+COOKIE_EXPIRES=6
