User Routes Completed

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -7,3 +7,17 @@ JWTSECRET=ASHIEPDKXMKDFEIDJKAJDSFQIAEDKJDFNDNDKJD
 JWTEXPIRES= 6d
 
 COOKIE_EXPIRES=6
+
+
+SMTP_SERVICE="gmail"
+
+SMTP_USER="4039b2dbf68b6b"
+
+SMTP_MAIL="bc220205983maa@vu.edu.pk"
+
+SMTP_PASSWORD="9798123149bc42"
+
+
+SMTP_HOST= "sandbox.smtp.mailtrap.io"
+
+SMTP_PORT="2525" 
