--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -2,6 +2,8 @@ PORT=5000
 
 DATABASE=mongodb://localhost:27017
 
+
+
 JWTSECRET=ASHIEPDKXMKDFEIDJKAJDSFQIAEDKJDFNDNDKJD
 
 JWTEXPIRES= 6d
@@ -21,3 +23,17 @@ SMTP_PASSWORD="9798123149bc42"
 SMTP_HOST= "sandbox.smtp.mailtrap.io"
 
 SMTP_PORT="2525" 
+
+FRONTEND_URL = "http://localhost:3000"
+
+
+mongodb://localhost:27017
+
+
+mongodb+srv://emailstormfacts:NzlDZWBcjvbbwcDM@cluster0.p75ssid.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+
+DATABASEPassword : NzlDZWBcjvbbwcDM  emailstormfacts
+
+
+mongodb+srv://emailstormfacts:NzlDZWBcjvbbwcDM@cluster0.p75ssid.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
