--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,6 +1,9 @@
 PORT=5000
 
-DATABASE=mongodb://localhost:27017
+DATABASE=mongodb+srv://emailstormfacts:NzlDZWBcjvbbwcDM@cluster0.p75ssid.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+
+mongodb://localhost:27017
 
 
 
